# feathr_bot

./: .gitignore  Dockerfile  Makefile  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
feathr_bot/: app.py  config.py  config.test.py  extensions.py  feathr_bot.db  feathr_bot_test.db
feathr_bot/exceptions/: errors.py
feathr_bot/models/: __init__.py  base.py  chat.py  message.py
feathr_bot/routes/: __init__.py  analyze.py  chat.py  errors.py
feathr_bot/schemas/: analyze_schema.py  chat_schema.py  message_schema.py
feathr_bot/services/: analyze_service.py  chat_service.py  openai_service.py
migrations/versions/: 29ff2f11fcd7_.py
tests/: conftest.py
tests/fixtures/: openai.py
tests/routes/: test_analyze_routes.py  test_chat_routes.py
tests/services/: test_analyze_service.py  test_chat_service.py
