[tool.poetry]
name = "feathr-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "feathr_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-marshmallow = "^0.15.0"
webargs = "^8.2.0"
requests = "^2.31.0"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
pytest = "^7.3.2"
mock = "^5.0.2"
flask-cors = "^3.0.10"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
